# guildforge

./: CHANGELOG.md  Cargo.toml  rustfmt.toml  worklog.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.next/: trace  trace-build
.next/cache/: config.json
apps/cli/src/: main.rs
apps/cli/src/commands/: diff.rs  logout.rs
apps/dashboard/: README.md  next.config.ts  package-lock.json
apps/dashboard/src/app/api/doctor/: route.ts
apps/dashboard/src/app/api/login/: route.ts
apps/dashboard/src/app/api/version/: route.ts
apps/dashboard/src/lib/: cli.ts  session.ts
crates/config/: Cargo.toml
crates/config/src/: lib.rs  role.rs
crates/engine/: Cargo.toml
crates/engine/src/: import_export.rs
crates/engine/tests/: e2e_pipeline.rs
crates/executor/src/: lib.rs
crates/logging/src/: lib.rs
crates/parser/src/: lib.rs
crates/parser/tests/: fuzz_tests.rs
crates/planner/: Cargo.toml
crates/planner/src/: convert.rs  lib.rs
crates/provider-discord/src/: error.rs  lib.rs
crates/provider-discord/src/client/: rate_limit.rs
crates/provider-discord/src/resources/: mod.rs
crates/provider/src/: lib.rs
crates/shared/src/: id.rs  time.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs
docs/: CLI_REFERENCE.md  TESTING.md
docs-site/: book.toml
docs-site/src/: cli-reference.md  dashboard.md  discord-limitations.md  executor.md  introduction.md  planner.md  provider-trait.md  quick-start.md
docs/adr/: ADR-0001-provider-trait.md  ADR-0004-config-format.md  ADR-0006-async-http.md
download/: Dockerfile  HOW-TO-PUBLISH.md  augment-infotech-v2.yaml  augment-infotech-v3.yaml  augment-infotech.yaml  guildforge-bulletproof.git-bundle  guildforge-clean.git-bundle  guildforge-docker.sh  guildforge-final-v2.git-bundle  guildforge-final.git-bundle  guildforge-guaranteed.git-bundle  guildforge-v1.0.0-fixed.git-bundle  guildforge-v1.0.0.git-bundle  guildforge-v1.0.1-clean.git-bundle  guildforge-v1.0.2.git-bundle  guildforge-v1.0.3.git-bundle
guildforge/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_STATE.md  README.md  ROADMAP.md  TASKS.md  clippy.toml  deny.toml  rust-toolchain.toml
guildforge/.github/workflows/: ci.yml  release.yml
guildforge/apps/cli/: Cargo.toml
guildforge/apps/cli/src/: main.rs
guildforge/apps/cli/src/commands/: apply.rs  backup.rs  destroy.rs  doctor.rs  export.rs  import.rs  init.rs  login.rs  mod.rs  plan.rs  restore.rs  validate.rs  version.rs
guildforge/apps/cli/tests/: config_integration.rs
guildforge/apps/dashboard/: package.json
guildforge/apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
guildforge/apps/dashboard/src/app/api/apply/: route.ts
guildforge/apps/dashboard/src/app/api/export/: route.ts
guildforge/apps/dashboard/src/app/api/history/: route.ts
guildforge/apps/dashboard/src/app/api/logout/: route.ts
guildforge/apps/dashboard/src/app/api/plan/: route.ts
guildforge/apps/dashboard/src/app/api/validate/: route.ts
guildforge/apps/dashboard/src/app/history/: page.tsx
guildforge/apps/dashboard/src/app/login/: page.tsx
guildforge/apps/dashboard/src/lib/: utils.ts
guildforge/crates/config/src/: channel.rs  forum.rs  invite.rs  lib.rs  ordering.rs  permission.rs  server.rs  webhook.rs  welcome.rs
guildforge/crates/engine/: Cargo.toml
guildforge/crates/engine/src/: diff.rs  lib.rs
guildforge/crates/engine/tests/: e2e_pipeline.rs
guildforge/crates/executor/: Cargo.toml
guildforge/crates/executor/src/: lib.rs
guildforge/crates/logging/: Cargo.toml
guildforge/crates/logging/src/: lib.rs
guildforge/crates/parser/: Cargo.toml
guildforge/crates/parser/src/: lib.rs
guildforge/crates/parser/tests/: fuzz_tests.proptest-regressions  property_tests.proptest-regressions  property_tests.rs
guildforge/crates/planner/: Cargo.toml
guildforge/crates/planner/benches/: planner_bench.rs
guildforge/crates/planner/src/: diff.rs  lib.rs  render.rs
guildforge/crates/planner/tests/: determinism.rs
guildforge/crates/provider/: Cargo.toml
guildforge/crates/provider-discord/: Cargo.toml
guildforge/crates/provider-discord/src/: lib.rs
guildforge/crates/provider-discord/src/client/: mod.rs
guildforge/crates/provider-discord/src/resources/: channel.rs  forum_tag.rs  invite.rs  overwrite.rs  role.rs  webhook.rs  welcome.rs
guildforge/crates/provider-discord/tests/: mock_api.rs
guildforge/crates/provider/src/: error.rs  lib.rs  resource.rs  traits.rs
guildforge/crates/provider/tests/: conformance.rs
guildforge/crates/shared/: Cargo.toml
guildforge/crates/shared/src/: lib.rs  snowflake.rs
guildforge/crates/state/: Cargo.toml
guildforge/crates/state/migrations/: 01_initial.sql
guildforge/crates/state/src/: lib.rs
guildforge/crates/validation/: Cargo.toml
guildforge/crates/validation/src/: lib.rs
guildforge/docs/: CRATE_LAYOUT.md  DISCORD_LIMITATIONS.md  SCHEMA.md  SECURITY.md
guildforge/docs-site/src/: SUMMARY.md  adrs.md  architecture.md  configuration.md  contributing.md  drift-detection.md  import-guide.md  installation.md  state-store.md  yaml-schema.md
guildforge/docs/adr/: ADR-0002-state-store.md  ADR-0003-planner-determinism.md  ADR-0005-error-model.md  ADR-0007-idempotency-ordering.md  ADR-0008-dashboard-binding.md
guildforge/examples/: community.yaml  company.yaml
guildforge/examples/broken/: duplicate_role.yaml  too_many_roles.yaml  unknown_category_ref.yaml  unknown_field.yaml  voice_fields_on_text.yaml
guildforge/packaging/: guildforge.json  guildforge.rb
guildforge/scripts/: generate-completions.py
guildforge/templates/: README.md  minimal.yaml
tests/: README.md
tool-results/: read_1783189839420_5133c8fbd259.txt
upload/: Pasted Content_1783189795406.txt  document.md
