[package]
name = "guildforge-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Workflow orchestrator for GuildForge."

[dependencies]
guildforge-config = { workspace = true }
guildforge-parser = { workspace = true }
guildforge-validation = { workspace = true }
guildforge-planner = { workspace = true }
guildforge-executor = { workspace = true }
guildforge-state = { workspace = true }
guildforge-provider = { workspace = true }
guildforge-logging = { workspace = true }
guildforge-shared = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
