[package]
name = "guildforge-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Semantic validation for GuildForge config files."

[dependencies]
guildforge-config = { workspace = true }
guildforge-shared = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
