[package]
name = "guildforge-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Plan executor for GuildForge."

[dependencies]
guildforge-provider = { workspace = true }
guildforge-state = { workspace = true }
guildforge-planner = { workspace = true }
guildforge-shared = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
