[package]
name = "guildforge-provider-discord"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Discord implementation of the GuildForge Provider trait."

[dependencies]
guildforge-provider = { workspace = true }
guildforge-shared = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
# Enable live tests against real Discord. Requires GUILDFORGE_BOT_TOKEN
# and GUILDFORGE_LIVE_GUILD_ID env vars. NEVER run in default CI.
live-discord = []

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
