[package]
name = "guildforge-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provider trait and shared resource types for GuildForge."

[dependencies]
guildforge-shared = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
pretty_assertions = { workspace = true }
